change interface location and write tests for auth routes
