# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/http_1_1.signInInput"
+                            "$ref": "#/definitions/http_1_1.SignInInput"
                         }
                     }
                 ],
@@ -90,7 +90,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/http_1_1.signUpInput"
+                            "$ref": "#/definitions/http_1_1.SignUpInput"
                         }
                     }
                 ],
@@ -516,7 +516,7 @@
         "http_1_1.metaParams": {
             "type": "object"
         },
-        "http_1_1.signInInput": {
+        "http_1_1.SignInInput": {
             "type": "object",
             "required": [
                 "email",
@@ -531,7 +531,7 @@
                 }
             }
         },
-        "http_1_1.signUpInput": {
+        "http_1_1.SignUpInput": {
             "type": "object",
             "required": [
                 "email",
